<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sjd3333@umd.edu">Sachin Jadhav</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>launch_ros</depend>
  <depend>launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
